<resources>
    <string name="app_name">BAKED Settings</string>
    <string name="teambaked_about_page">About #teamBAKED</string>
    <string name="teambaked_about_summary">@null</string>
    <string name="baked_devs">Developers of teambaked</string>
    <string name="baked_devs_summary">@null</string>
    <string name="baked">Black Android Kang Everyone Desires</string>
    <string name="baked_website_title">BAKED temp. Website</string>
    <string name="baked_website_summary">www.teamicemods.com - Find all releases &amp; changelogs here.</string>
    <string name="baked_source_title">BAKED Source</string>
    <string name="baked_source_summary">BAKED is fully open source. http://github.com/TeamBAKED</string>
    <string name="baked_irc_title">Join us on IRC</string>
    <string name="baked_irc_summary">#teamBAKED @ irc.freenode.net</string>
    <string name="header_system">System</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navbar</string>
    <string name="header_powerwidget">Powerwidgets</string>
    <string name="header_tablet_powerwidget">Tablet PowerWidgets</string>
    <string name="header_lockscreen">Lockscreen</string>
    <string name="header_system_extra">System Settings</string>
    <string name="header_statusbar_extra">Statusbar Settings</string>
    <string name="header_sound_title">Sound</string>
    <string name="header_performance">Performance</string>
    <string name="header_lockscreen_extra_title">Lockscreen Settings</string>
    <string name="title_hardwarekeys">Hardware Keys</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navbar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="power_menu_options">Power Menu</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_system_extra">@null</string>
    <string name="header_summary_statusbar_extra">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_powerwidget">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_lockscreen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreen_extra">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_hardware_keys">@null</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In statusbar, while typing (requires reboot)</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="kill_app_longpress_back">Hold back to kill</string>
    <string name="kill_app_longpress_back_summary">Holding back will kill the current activity</string>
    <string name="recent_kill_all">Enable kill-all-button</string>
    <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
    <string name="alt_resolver">Use alternative default app picker</string>
    <string name="alt_resolver_summary">Switches to a app picker that one click selects the app also has always checkbox at bottom</string>
    <string name="force_tablet_ui">Force Tablet UI</string>
    <string name="force_tablet_ui_summary">This will force the device to use the Tablet UI (requires reboot). **If setting this on a high dpi device please change to a lower screen density before setting this to on</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="clock_date_opens_title">Clock/Date opens</string>
    <string name="clock_date_opens_summary">Notification pulldown clock opens alarms, date opens calendar (requires UI restart)</string>
    <string name="primary_text_colors">Change system wide text colors</string>
    <string name="title_flip_mode">Face down audio mode</string>
    <string name="summary_flip_mode">Choose what to do with sound when you flip your phone face down</string>
    <string name="flip_cat_title">Face Down Action</string>
    <string name="title_timeout_sec">Screen Timeout</string>
    <string name="summary_timeout_sec">Time the screen is off before the flip sensor is disabled</string>
    <string name="title_down_sec">Face down seconds</string>
    <string name="summary_down_sec">Time required for your phone to be considered face down</string>
    <string name="flip_action_positive">OK</string>
    <string name="flip_dialog_title">How it works</string>
    <string name="flip_dialog_msg">Your phone will flip over to go to vibrate or silent on how you choose.
        It will take 1.5 (default) seconds to change once flipped over.
        It will then disable the flip once the screen is turned on after 15 (default) seconds.
        NOTE: **You will need to turn the screen back on once flipped over to get sound back once the
        screen timeout time has been reached.**</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="title_headphone_audio_mode">Headphones plugged in action</string>
    <string name="summary_headphone_audio_mode">What to do with sound when headphones are plugged in and out</string>
    <string name="title_bt_audio_mode">Bluetooth A2DP connected action</string>
    <string name="summary_bt_audio_mode">What to do with sound when A2DP is connected</string>
    <string name="headphones_mode_no_action">No action</string>
    <string name="headphones_mode_vibrate">Vibrate mode</string>
    <string name="headphones_mode_silent">Silent mode</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="title_show_screenshot">Show screenshot</string>
    <string name="title_show_power_off">Show power off</string>
    <string name="title_show_reboot_chooser">Show reboot chooser</string>
    <string name="title_show_expanded_desktop_toggle">Show expanded desktop toggle</string>
    <string name="title_show_airplane_toggle">Show airplane toggle</string>
    <string name="title_show_navbar_hide">Show navigation bar toggle</string>
    <string name="title_show_profile_chooser">Show profile chooser</string>
    <string name="title_show_sound_chooser">Show vibrate/sound chooser</string>
    <string name="statusbar_bg">Statusbar background</string>
    <string name="statusbar_background_style">Statusbar background style</string>
    <string name="statusbar_background_color">Statusbar background color</string>
    <string name="statusbar_brightness_slider_title">Statusbar brightness slider</string>
    <string name="statusbar_brightness_slider_summary">Whether the Statusbar brightness slider is on when you slide across the statusbar</string>
    <string name="toggles_visible_enabled">Show toggles</string>
    <string name="toggle_style_title">Toggle style</string>
    <string name="toggle_style_summary">Whether to show icons or text on your toggles.</string>
    <string name="toggles_layout_title">Toggle Layout</string>
    <string name="enabled_toggles_title">Enabled toggles</string>
    <string name="enabled_toggles_summary">Choose toggles to display</string>
    <string name="toggles_display_dialog">Choose which toggles to use</string>
    <string name="toggles_display_close">Close</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order which your toggles are displayed</string>
    <string name="brightness_location_title">Brightness location</string>
    <string name="reset_toggles_title">Reset toggles</string>
    <string name="reset_toggles_summary">Reset all toggles and their order</string>
    <string name="toggle_button_alpha_title">Toggle indicator alpha</string>
    <string name="toggle_btn_enabled_color_title">Toggle on color</string>
    <string name="toggle_btn_disabled_color_title">Toggle off color</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="alpha_dialog_title">Set alpha value</string>
    <string name="notif_background_default">Default background</string>
    <string name="notif_background_color_fill">Color fill</string>
    <string name="notif_background_custom_image">Custom image</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="navbar_button_cat">Navigation bar buttons</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="navbar_widgets">Navigation Bar Widgets</string>
    <string name="navbar_enable_bar">Enable bar</string>
    <string name="navigation_bar_height_title">Navigation bar height</string>
    <string name="navigation_bar_height_summary">Navigation Bar height while in portrait.</string>
    <string name="navigation_bar_height_landscape_title">Navigation bar height landscape</string>
    <string name="navigation_bar_height_landscape_summary">Navigation Bar height while in landscape.</string>
    <string name="navigation_bar_width_title">Navigation bar width.</string>
    <string name="navigation_bar_width_summary">Navigation Bar height if the bar is along a side.</string>
    <string name="navigation_bar_tint_title">Navbar button color</string>
    <string name="navigation_bar_glow_tint_title">Navbar press/glow color</string>
    <string name="navigation_bar_glow_tint_summary">When you press on a button, there is a glow. Use this to change the color of the glow.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="navbar_bg_color">Navbar background color</string>
    <string name="navbar_widgets_title">Configure widgets</string>
    <string name="navbar_bg">Navbar background</string>
    <string name="navbar_button_colors">Navbar button color</string>
    <string name="navbar_background_style">Navbar background style</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="lcd_density_summary">unknown</string>
</resources>