<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_short">

        <CheckBoxPreference
            android:key="recent_kill_all"
            android:title="@string/recent_kill_all"
            android:summary="@string/recent_kill_all_summary" />

        <CheckBoxPreference
            android:key="kill_app_longpress_back"
            android:title="@string/kill_app_longpress_back"
            android:summary="@string/kill_app_longpress_back_summary"/>

        <CheckBoxPreference
            android:key="disable_bootanimation"
            android:title="@string/disable_bootanimation_title" />

        <CheckBoxPreference
            android:key="use_alt_resolver"
            android:title="@string/alt_resolver"
            android:summary="@string/alt_resolver_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="vibrate_notif_expand"
            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary" />

        <CheckBoxPreference
            android:key="clock_date_opens"
            android:title="@string/clock_date_opens_title"
            android:summary="@string/clock_date_opens_summary" />

        <CheckBoxPreference
            android:key="plugged_unplugged_wakeup"
            android:title="@string/plugged_unplugged_wakeup_title"
            android:summary="@string/plugged_unplugged_wakeup_summary"
            android:defaultValue="true" />

        <Preference
            android:key="lcd_density_setup"
            android:title="@string/lcd_density_title"
            android:summary="@string/lcd_density_summary" />

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

        <CheckBoxPreference
            android:key="hide_extras"
            android:title= "@string/hide_extras"
            android:summary= "@string/hide_extras_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
