<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="show_power_off"
        android:title="@string/title_show_power_off" />

    <CheckBoxPreference android:key="show_screenshot"
        android:title="@string/title_show_screenshot" />

    <CheckBoxPreference android:key="show_reboot_chooser"
        android:title="@string/title_show_reboot_chooser" />

    <CheckBoxPreference android:key="show_airplane_toggle"
        android:title="@string/title_show_airplane_toggle" />

    <CheckBoxPreference android:key="show_navbar_hide"
        android:title="@string/title_show_navbar_hide" />

    <CheckBoxPreference android:key="show_profile_chooser"
        android:title="@string/title_show_profile_chooser" />

    <CheckBoxPreference android:key="show_sound_chooser"
        android:title="@string/title_show_sound_chooser" />

    <CheckBoxPreference android:key="expanded_desktop_no_navbar"
        android:title="@string/title_show_expanded_desktop_toggle" />

    <ListPreference android:key="expanded_desktop"
        android:title="@string/title_show_expanded_desktop_toggle"
        android:entries="@array/expanded_desktop_entries"
        android:entryValues="@array/expanded_desktop_values"
        android:persistent="false" />

</PreferenceScreen>
